Removed Collectors.collect(toList) and replaced with toList()