@@ -2,7 +2,6 @@ package demo.pxportfolio.realestateagency.geodata.city;
 
 import demo.pxportfolio.realestateagency.misc.base.ListDto;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -20,6 +19,6 @@ public class CityService {
         return cityRepository.findAll()
                 .stream()
                 .map(ListDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
