@@ -3,7 +3,6 @@ package demo.pxportfolio.realestateagency.misc.agents;
 import demo.pxportfolio.realestateagency.config.exception.EntityNotFoundException;
 import demo.pxportfolio.realestateagency.misc.base.ListDto;
 import java.util.List;
-import java.util.stream.Collectors;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
@@ -27,6 +26,6 @@ public class AgentService {
         return agentRepository.findAll()
                 .stream()
                 .map(ListDto::new)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
